feat: Production-ready Solana Stablecoin Standard implementation
- Full Solana integration with vendored OpenSSL for Windows compatibility
- Complete Backend API with all routes (auth, stablecoin, operations, admin, roles, minters, compliance, webhooks, audit, users)
- CLI tool with 20 commands for stablecoin management
- Admin TUI for terminal-based administration
- TypeScript SDK with full Anchor integration
- Next.js frontend with wallet adapter and SDK integration
- Docker production setup with nginx and postgres
- CI/CD pipeline for automated builds and testing
- Comprehensive error handling and type safety

SSS-1: Basic stablecoin with mint/burn/freeze
SSS-2: Compliance features (blacklist, seizure, screening)
SSS-3: Advanced features (minter quotas, confidential transfers)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,9 @@ solana-sdk = "2.0"
 solana-client = "2.0"
 solana-program = "2.0"
 
+# OpenSSL (vendored for cross-platform builds)
+openssl = { version = "0.10", features = ["vendored"] }
+
 # Backend
 axum = "0.7"
 tokio = { version = "1.0", features = ["full"] }
