--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -12,11 +12,26 @@ path = "src/main.rs"
 [dependencies]
 anchor-client.workspace = true
 anchor-lang.workspace = true
+anchor-spl.workspace = true
 anyhow.workspace = true
-clap.workspace = true
+clap = { workspace = true, features = ["derive", "env"] }
 serde.workspace = true
 serde_json.workspace = true
 solana-client.workspace = true
 solana-sdk.workspace = true
+spl-token = { workspace = true }
+spl-token-2022 = { version = "4.0", features = ["no-entrypoint"] }
 toml.workspace = true
 thiserror.workspace = true
+base64 = "0.22"
+bincode = "1.3"
+borsh = "0.10"
+sha2 = "0.10"
+
+[features]
+default = []
+# On Windows, use native-tls or install Perl for vendored OpenSSL
+# For now, we use native-tls feature from solana-client if available
+
+[target.'cfg(windows)'.dependencies]
+# Windows requires Perl for vendored OpenSSL builds
