--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,282 @@
+# Solana Stablecoin Standard - Production Docker Compose
+# Version: 1.0.0
+# 
+# Usage:
+#   Development: docker-compose up -d
+#   Production:  docker-compose -f docker-compose.yml -f docker-compose.prod.yml up -d
+#
+# Environment variables should be set via .env file or environment
+
 version: '3.8'
 
 services:
+  # =============================================================================
+  # PostgreSQL Database (Primary Data Store)
+  # =============================================================================
+  postgres:
+    image: postgres:16-alpine
+    container_name: sss-postgres
+    restart: unless-stopped
+    
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER:-sss}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-sss_password_change_in_production}
+      POSTGRES_DB: ${POSTGRES_DB:-sss_db}
+      # Performance tuning
+      POSTGRES_INITDB_ARGS: "--encoding=UTF-8 --locale=C"
+      # Logging
+      POSTGRES_LOG_STATEMENT: "none"
+      POSTGRES_LOG_MIN_DURATION_STATEMENT: "1000"
+    
+    ports:
+      - "${POSTGRES_PORT:-5432}:5432"
+    
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - ./docker/postgres/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+    
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-sss} -d ${POSTGRES_DB:-sss_db}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+    
+    networks:
+      - sss-network
+    
+    # Resource limits for production
+    deploy:
+      resources:
+        limits:
+          cpus: '2'
+          memory: 2G
+        reservations:
+          cpus: '0.5'
+          memory: 512M
+    
+    # Security settings
+    security_opt:
+      - no-new-privileges:true
+    
+    # Logging configuration
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+
+  # =============================================================================
+  # Redis (Caching, Rate Limiting, Session Store)
+  # =============================================================================
+  redis:
+    image: redis:7-alpine
+    container_name: sss-redis
+    restart: unless-stopped
+    
+    command: >
+      redis-server
+      --appendonly yes
+      --maxmemory 256mb
+      --maxmemory-policy allkeys-lru
+      --save 60 1000
+      ${REDIS_PASSWORD:+--requirepass ${REDIS_PASSWORD}}
+    
+    ports:
+      - "${REDIS_PORT:-6379}:6379"
+    
+    volumes:
+      - redis_data:/data
+    
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+    
+    networks:
+      - sss-network
+    
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 512M
+        reservations:
+          cpus: '0.25'
+          memory: 128M
+    
+    security_opt:
+      - no-new-privileges:true
+    
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "5m"
+        max-file: "3"
+
+  # =============================================================================
+  # Backend API Service
+  # =============================================================================
   backend:
     build:
       context: .
       dockerfile: backend/Dockerfile
-    ports:
-      - "3001:3001"
+      args:
+        - BUILD_PROFILE=release
+    
+    image: sss-backend:${VERSION:-latest}
+    container_name: sss-backend
+    restart: unless-stopped
+    
     environment:
-      - RUST_LOG=info
-      - PORT=3001
-      - RPC_URL=https://api.devnet.solana.com
-      - PROGRAM_ID=SSSToken11111111111111111111111111111111111
+      # Server configuration
+      - SERVER_ADDR=0.0.0.0:3001
+      - LOG_LEVEL=${LOG_LEVEL:-info}
+      - RUST_LOG=${RUST_LOG:-sss_backend=info,tower_http=info}
+      
+      # Database (required)
+      - DATABASE_URL=postgresql://${POSTGRES_USER:-sss}:${POSTGRES_PASSWORD:-sss_password_change_in_production}@postgres:5432/${POSTGRES_DB:-sss_db}
+      
+      # Redis (optional but recommended)
+      - REDIS_URL=redis://${REDIS_PASSWORD:+:${REDIS_PASSWORD}@}redis:6379
+      
+      # Solana configuration
+      - SOLANA_RPC_URL=${SOLANA_RPC_URL:-https://api.devnet.solana.com}
+      - PROGRAM_ID=${PROGRAM_ID:-SSSToken11111111111111111111111111111111111}
+      
+      # Authentication
+      - JWT_SECRET=${JWT_SECRET:-change_this_to_a_secure_random_string_in_production}
+      - JWT_EXPIRY_SECS=${JWT_EXPIRY_SECS:-86400}
+      
+      # Rate limiting
+      - RATE_LIMIT_REQUESTS=${RATE_LIMIT_REQUESTS:-100}
+      - RATE_LIMIT_WINDOW_SECS=${RATE_LIMIT_WINDOW_SECS:-60}
+      
+      # Feature flags
+      - ENABLE_METRICS=${ENABLE_METRICS:-true}
+      - ENABLE_WEBHOOKS=${ENABLE_WEBHOOKS:-true}
+    
+    ports:
+      - "${BACKEND_PORT:-3001}:3001"
+    
+    volumes:
+      # For any file-based operations or certificates
+      - backend_data:/app/data
+    
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3001/health"]
+      test: ["CMD-SHELL", "curl -sf http://localhost:3001/health || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 10s
-    restart: unless-stopped
+      start_period: 60s
+    
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    
+    networks:
+      - sss-network
+    
+    deploy:
+      resources:
+        limits:
+          cpus: '2'
+          memory: 1G
+        reservations:
+          cpus: '0.5'
+          memory: 256M
+    
+    security_opt:
+      - no-new-privileges:true
+    
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "20m"
+        max-file: "5"
 
-  # Optional: Redis for caching
-  redis:
-    image: redis:7-alpine
+  # =============================================================================
+  # Nginx Reverse Proxy (Production)
+  # =============================================================================
+  nginx:
+    image: nginx:alpine
+    container_name: sss-nginx
+    restart: unless-stopped
+    
     ports:
-      - "6379:6379"
+      - "${NGINX_HTTP_PORT:-80}:80"
+      - "${NGINX_HTTPS_PORT:-443}:443"
+    
     volumes:
-      - redis_data:/data
-    restart: unless-stopped
+      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./docker/nginx/ssl:/etc/nginx/ssl:ro
+      - nginx_cache:/var/cache/nginx
+    
+    depends_on:
+      - backend
+    
+    healthcheck:
+      test: ["CMD-SHELL", "curl -sf http://localhost/health || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    
+    networks:
+      - sss-network
+    
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 256M
+        reservations:
+          cpus: '0.25'
+          memory: 64M
+    
+    security_opt:
+      - no-new-privileges:true
+    
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+    
+    profiles:
+      - production
 
+# =============================================================================
+# Named Volumes for Data Persistence
+# =============================================================================
 volumes:
+  postgres_data:
+    driver: local
+    name: sss-postgres-data
+  
   redis_data:
+    driver: local
+    name: sss-redis-data
+  
+  backend_data:
+    driver: local
+    name: sss-backend-data
+  
+  nginx_cache:
+    driver: local
+    name: sss-nginx-cache
+
+# =============================================================================
+# Networks
+# =============================================================================
+networks:
+  sss-network:
+    driver: bridge
+    name: sss-network
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.28.0.0/16
