--- a/example-frontend/package.json
+++ b/example-frontend/package.json
@@ -14,12 +14,19 @@
     "react": "^18.3",
     "react-dom": "^18.3",
     "@solana/web3.js": "^1.98",
+    "@solana/spl-token": "^0.4",
     "@coral-xyz/anchor": "^0.31",
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-react-ui": "^0.9.35",
+    "@solana/wallet-adapter-wallets": "^0.19.32",
     "tailwindcss": "^3.4"
   },
   "devDependencies": {
     "@types/node": "^22",
     "@types/react": "^18",
-    "typescript": "^5.7"
+    "typescript": "^5.7",
+    "postcss": "^8.4",
+    "autoprefixer": "^10.4"
   }
 }
