feat: Iterative improvements and polish
Backend improvements:
- Real Solana/Anchor transaction integration (replaced placeholders)
- Comprehensive input validation with validator crate
- Fixed audit log failure handling with proper error tracking
- Added 50+ backend API tests
- Added error handling for Solana-specific errors
- Added authority keypair configuration

Test improvements:
- Expanded Solana program tests with error case coverage
- Added test_minter_management.ts for minter/quota tests
- Added test_error_cases.ts for all error types
- Fixed and expanded fuzz tests (fuzz_burn, fuzz_transfer, fuzz_roles)
- Added Trident configuration and README

Files changed: 36
Tests added: 100+

--- a/.env.example
+++ b/.env.example
@@ -55,6 +55,12 @@ SOLANA_RPC_URL=https://api.devnet.solana.com
 # SSS Token Program ID
 PROGRAM_ID=SSSToken11111111111111111111111111111111111
 
+# Authority keypair for signing transactions (base58 encoded private key)
+# WARNING: NEVER commit this value to version control!
+# Generate with: solana-keygen new --outfile authority.json
+# Export with: cat authority.json | jq -r '.[]' | tr -d '\n'
+# AUTHORITY_KEYPAIR=your_base58_encoded_private_key_here
+
 # =============================================================================
 # Feature Flags
 # =============================================================================
