--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -60,6 +60,14 @@ once_cell = "1.19"
 # Validation
 validator = { version = "0.18", features = ["derive"] }
 regex = "1"
+url = "2"
 
 # Metrics
 prometheus = "0.13"
+
+[dev-dependencies]
+tokio-test = "0.4"
+mockall = "0.13"
+wiremock = "0.6"
+serial_test = "3.0"
+pretty_assertions = "1.4"
